Fix align tech news cover

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -110,7 +110,7 @@ body {
  */
 
 .cover {
-  padding: 0 1.5rem;
+  padding: 5rem 1.5rem;
 }
 .cover .btn-lg {
   padding: .75rem 1.25rem;
@@ -213,7 +213,7 @@ body {
 
 .tech-news {
   color: black;
-  margin: 20px;
+  margin: 10px;
 }
 
 .tech-news a {
@@ -221,5 +221,5 @@ body {
 }
 
 .tech-news > .card {
-  padding: 20px;
+  padding: 10px;
 }
